--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="stylesheets/reset.css" type="text/css"/>
+        <link rel="stylesheet" href="stylesheets/styles.css" type="text/css">
     </head>
     <body>
         <header>
-
+        
         </header>
         <main>
-
         </main>
         <footer>
             
         </footer>
+        <script src="index.js"></script>
     </body>
 </html>
