Add reset and ludicrous buttons

--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     </head>
     <body>
         <header>
-        
+            <h1>Etch a sketch</h1>
         </header>
         <main>
+            <div id="options">
+                <div>
+                    <button id="reset" name="reset">Reset</button>
+                </div>
+                <div>
+                    <button id="ludicrous" name="ludicrous">Ludicrous</button>
+                </div>
+                <div>
+                    <button id="lighten" name="darken">Darken</button>
+                </div>
+                <div>
+                    <button id="lighten" name="lighten">Lighten</button>
+                </div>
+            </div>
+            <div id="pens"></div>
         </main>
         <footer>
             
