Add darken and lighten buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <button id="ludicrous" name="ludicrous">Ludicrous</button>
                 </div>
                 <div>
-                    <button id="lighten" name="darken">Darken</button>
+                    <button id="darken" name="darken">Darken</button>
                 </div>
                 <div>
                     <button id="lighten" name="lighten">Lighten</button>
