Add color picker

--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
                     <button id="lighten" name="lighten">Lighten</button>
                 </div>
             </div>
-            <div id="pens"></div>
+            <div id="pens">
+                <div id="color">
+                    <label for="color-picker">Color picker</label>
+                    <input type="color" id="penColor" name="penColor" value="#ff0000"><br><br>
+                </div>
+                <div id="thickness">
+
+                </div>
+            </div>
         </main>
         <footer>
             
