--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     <input type="color" id="penColor" name="penColor" value="#ff0000"><br><br>
                 </div>
                 <div id="thickness">
-
+                    <div id="pen">
+                        <img src="assets/images/pen.png"/>
+                    </div>
                 </div>
             </div>
         </main>
