Improve naming conventions

--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
                     <button id="lighten" name="lighten">Lighten</button>
                 </div>
             </div>
-            <div id="pens">
-                <div id="color">
-                    <label for="color-picker">Color picker</label>
+            <div id="color-thickness">
+                <div id="color-picker">
+                    <label for="penColor">Color picker</label>
                     <input type="color" id="penColor" name="penColor" value="#ff0000"><br><br>
                 </div>
-                <div id="thickness">
-                    <div id="pen">
-                        <img src="assets/images/pen.png"/>
+                <div id="pen-picker">
+                    <div id="pens">
+                        <img id="16" src="assets/images/pen16.png"/>
+                        <img id="32" src="assets/images/pen32.png"/>
+                        <img id="64" src="assets/images/pen64.png"/>
+                        <img id="128" src="assets/images/pen128.png"/>
                     </div>
                 </div>
             </div>
@@ -39,6 +42,6 @@
         <footer>
             
         </footer>
-        <script src="index.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
