--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="color-thickness">
                 <div id="color-picker">
                     <label for="penColor">Color picker</label>
-                    <input type="color" id="penColor" name="penColor" value="#ff0000"><br><br>
+                    <input type="color" id="penColor" name="penColor" value="#ff0000"/>
                 </div>
                 <div id="pen-picker">
                     <div id="pens">
