Add modes for selection and painting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>Etch a sketch</h1>
+            <h1>Etch-A-Sketch</h1>
         </header>
         <main>
             <div id="options">
@@ -27,7 +27,7 @@
             <div id="color-thickness">
                 <div id="color-picker">
                     <label for="penColor">Color picker</label>
-                    <input type="color" id="penColor" name="penColor" value="#ffffff"/>
+                    <input type="color" id="penColor" name="penColor" value="#1322ff"/>
                 </div>
                 <div id="pen-picker">
                     <div id="pens">
@@ -40,7 +40,8 @@
             </div>
         </main>
         <footer>
-            
+            <p>S for selection mode</p>
+            <p>P for paint mode</p>
         </footer>
         <script src="main.js"></script>
     </body>
