Focus mode selection

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                 </div>
                 <div id="pen-picker">
                     <div id="pens">
-                        <img id="16" src="assets/images/pen16.png"/>
-                        <img id="32" src="assets/images/pen32.png"/>
-                        <img id="64" src="assets/images/pen64.png"/>
-                        <img id="128" src="assets/images/pen128.png"/>
+                        <img id="16" src="assets/images/pens/pen16.png"/>
+                        <img id="32" src="assets/images/pens/pen32.png"/>
+                        <img id="64" src="assets/images/pens/pen64.png"/>
+                        <img id="128" src="assets/images/pens/pen128.png"/>
                     </div>
                 </div>
             </div>
         </main>
         <footer>
-            <p>S for selection mode</p>
-            <p>P for paint mode</p>
+            <p id="s">S for selection mode</p>
+            <p id="d">d for draw mode</p>
         </footer>
         <script src="main.js"></script>
     </body>
