Add normal button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                     <button id="reset" name="reset">Reset</button>
                 </div>
                 <div>
+                    <button id="normal" name="normal">Normal</button>
+                </div>
+                <div>
                     <button id="ludicrous" name="ludicrous">Ludicrous</button>
                 </div>
                 <div>
@@ -31,10 +34,10 @@
                 </div>
                 <div id="pen-picker">
                     <div id="pens">
-                        <img id="16" src="assets/images/pens/pen16.png"/>
-                        <img id="32" src="assets/images/pens/pen32.png"/>
-                        <img id="64" src="assets/images/pens/pen64.png"/>
                         <img id="128" src="assets/images/pens/pen128.png"/>
+                        <img id="64" src="assets/images/pens/pen64.png"/>
+                        <img id="32" src="assets/images/pens/pen32.png"/>
+                        <img id="16" src="assets/images/pens/pen16.png"/>
                     </div>
                 </div>
             </div>
