Make reset only clear the screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <main>
             <div id="options">
                 <div>
-                    <button id="reset" name="reset">Reset</button>
+                    <button id="clear-screen" name="clear-screen">Reset</button>
                 </div>
                 <div>
                     <button id="normal" name="normal">Normal</button>
