Rename reset to clear-screen, change functionality

--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
         <main>
             <div id="options">
                 <div>
-                    <button id="clear-screen" name="clear-screen">Reset</button>
-                </div>
-                <div>
-                    <button id="normal" name="normal">Normal</button>
+                    <button id="clear-screen" name="clear-screen">Clear screen</button>
                 </div>
                 <div>
                     <button id="ludicrous" name="ludicrous">Ludicrous</button>
