Make color picker responsive in all modes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                     <button id="clear-screen" name="clear-screen">Clear screen</button>
                 </div>
                 <div>
+                    <button id="normal" name="normal">Normal</button>
+                </div>
+                <div>
                     <button id="ludicrous" name="ludicrous">Ludicrous</button>
                 </div>
                 <div>
