Add icon in title bar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="stylesheets/reset.css" type="text/css"/>
         <link rel="stylesheet" href="stylesheets/styles.css" type="text/css">
+        <link rel="icon" href="assets/images/icon.png"
     </head>
     <body>
         <header>
@@ -44,7 +45,7 @@
         </main>
         <footer>
             <p id="s">S for selection mode</p>
-            <p id="d">d for draw mode</p>
+            <p id="d">D for draw mode</p>
         </footer>
         <script src="main.js"></script>
     </body>
