Add title of the game

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <title>Etch-A-Sketch | Seawee games</title>
         <link rel="stylesheet" href="stylesheets/reset.css" type="text/css"/>
         <link rel="stylesheet" href="stylesheets/styles.css" type="text/css">
         <link rel="icon" href="assets/images/icon.png"
