--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <title>Etch-A-Sketch | Seawee games</title>
         <link rel="stylesheet" href="stylesheets/reset.css" type="text/css"/>
-        <link rel="stylesheet" href="stylesheets/styles.css" type="text/css">
-        <link rel="icon" href="assets/images/icon.png"
+        <link rel="stylesheet" href="stylesheets/styles.css" type="text/css"/>
+        <link rel="icon" href="assets/images/icon.png"/>
     </head>
     <body>
         <header>
