modify draw canvas function

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
-    <title>Etch-A-Sketch</title>
+    <title>Paint</title>
     <link rel="stylesheet" href="stylesheets/styles.css" type="text/css"/>
     <link rel="icon" href="assets/images/icon.png"/>
 </head>
-<body>
-<header>
-    <h1>Yippie Sketcher</h1>
+<body class="body">
+<header class="header">
+    <h1>Pixel</h1>
 </header>
-<main>
+<main class="main">
 <!--    <div id="options">-->
 <!--        <div>-->
 <!--            <button id="clear-screen" name="clear-screen">Clear screen</button>-->
@@ -28,8 +28,8 @@
 <!--            <button id="lighten" name="lighten">Lighten</button>-->
 <!--        </div>-->
 <!--    </div>-->
-    <div class="screen-container">
-        <div class="screen">
+    <div class="canvas-container">
+        <div class="canvas">
 
         </div>
     </div>
@@ -48,9 +48,9 @@
 <!--        </div>-->
 <!--    </div>-->
 </main>
-<footer>
-    <p id="s">S for selection mode</p>
-    <p id="d">D for draw mode</p>
+<footer class="footer">
+    <p>Made by Chandra Prakash</p>
+    <p>Hosted with love by github</p>
 </footer>
 <script src="main.js"></script>
 </body>
