Add options and colors areas

--- a/index.html
+++ b/index.html
@@ -11,42 +11,40 @@
     <h1>Pixel</h1>
 </header>
 <main class="main">
-<!--    <div id="options">-->
-<!--        <div>-->
-<!--            <button id="clear-screen" name="clear-screen">Clear screen</button>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <button id="normal" name="normal">Normal</button>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <button id="ludicrous" name="ludicrous">Ludicrous</button>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <button id="darken" name="darken">Darken</button>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <button id="lighten" name="lighten">Lighten</button>-->
-<!--        </div>-->
-<!--    </div>-->
+    <div class="modes">
+        <div>
+            <button id="normal" name="normal">Normal</button>
+        </div>
+        <div>
+            <button id="ludicrous" name="ludicrous">Ludicrous</button>
+        </div>
+    </div>
     <div class="canvas-container">
         <div class="canvas">
 
         </div>
     </div>
-<!--    <div id="color-thickness">-->
-<!--        <div id="color-picker">-->
-<!--            <label for="penColor">Color picker</label>-->
-<!--            <input type="color" id="penColor" name="penColor" value="#1322ff"/>-->
-<!--        </div>-->
-<!--        <div id="pen-picker">-->
-<!--            <div id="pens">-->
-<!--                <img id="128" src="assets/images/pens/pen128.png"/>-->
-<!--                <img id="64" src="assets/images/pens/pen64.png"/>-->
-<!--                <img id="32" src="assets/images/pens/pen32.png"/>-->
-<!--                <img id="16" src="assets/images/pens/pen16.png"/>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+
+    <div id="color-thickness">
+        <div id="color-picker">
+            <label for="penColor">Color picker</label>
+            <input type="color" id="penColor" name="penColor" value="#1322ff"/>
+        </div>
+        <div>
+            <button id="darken" name="darken">Darken</button>
+        </div>
+        <div>
+            <button id="lighten" name="lighten">Lighten</button>
+        </div>
+        <div id="pen-picker">
+            <div id="pens">
+                <img id="128" src="assets/images/pens/pen128.png"/>
+                <img id="64" src="assets/images/pens/pen64.png"/>
+                <img id="32" src="assets/images/pens/pen32.png"/>
+                <img id="16" src="assets/images/pens/pen16.png"/>
+            </div>
+        </div>
+    </div>
 </main>
 <footer class="footer">
     <p>Made by Chandra Prakash</p>
