--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <div class="canvas">
 
             </div>
-            <button>clear screen</button>
+            <div class="clear-canvas">
+                <button>Clean canvas</button>
+            </div>
         </div>
     </div>
     <div class="dipping-area">
@@ -43,17 +45,17 @@
             </div>
         </div>
         <div class="brushes">
-            <div class="brush thin">
-                <img class="brush__img" src="assets/images/pens/pen128.png" alt="thin"/>
+            <div class="brush">
+                <img class="brush__img brush__thin" data-thickness="S" src="assets/images/pens/pen128.png" alt="thin"/>
             </div>
-            <div class="brush medium">
-                <img class="brush__img" src="assets/images/pens/pen64.png" alt="medium"/>
+            <div class="brush">
+                <img class="brush__img brush__medium" data-thickness="M" src="assets/images/pens/pen64.png" alt="medium"/>
             </div>
-            <div class="brush thick">
-                <img class="brush__img" src="assets/images/pens/pen32.png" alt="thick"/>
+            <div class="brush">
+                <img class="brush__img brush__thick" data-thickness="L" src="assets/images/pens/pen32.png" alt="thick"/>
             </div>
-            <div class="brush very-thick">
-                <img class="brush__img" src="assets/images/pens/pen16.png" alt="ver thick"/>
+            <div class="brush">
+                <img class="brush__img brush__very-thick" data-thickness="XL" src="assets/images/pens/pen16.png" alt="ver thick"/>
             </div>
         </div>
     </div>
