Create cards for modes

--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
 <main class="main">
     <div class="modes">
         <div class="mode">
-            <button class="button mode__normal" name="normal">Normal</button>
+            <div class="mode__img">
+                <img class="mode__img__img" src="assets/images/unicorn-1.png" alt="ludicrous">
+            </div>
+            <div class="mode__name">
+                <p>Ludicrous</p>
+            </div>
         </div>
         <div class="mode">
-            <button class="button mode__ludicrous" name="ludicrous">Ludicrous</button>
+            <div class="mode__img">
+                <img class="mode__img__img" src="assets/images/unicorn-2.jpeg" alt="normal">
+            </div>
+            <div class="mode__name">
+                <p>Normal</p>
+            </div>
         </div>
     </div>
     <div class="canvas-area">
