add brush icon and modify canvas

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <div class="clear-canvas">
                 <button>Clean canvas</button>
             </div>
+            <div class="eraser">
+                <i class="fas fa-eraser"></i>
+            </div>
         </div>
     </div>
     <div class="dipping-area">
