implement lighten and darken

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="mode__img">
                 <img class="mode__img__img" src="assets/images/unicorn-1.png" alt="ludicrous">
             </div>
-            <div class="mode__name">
+            <div class="mode__name mode_ludicrous">
                 <p>Ludicrous</p>
             </div>
         </div>
@@ -25,7 +25,7 @@
             <div class="mode__img">
                 <img class="mode__img__img" src="assets/images/unicorn-2.jpeg" alt="normal">
             </div>
-            <div class="mode__name">
+            <div class="mode__name mode_normal">
                 <p>Normal</p>
             </div>
         </div>
@@ -46,7 +46,7 @@
     <div class="dipping-area">
         <div class="palette">
             <div class="palette__color-picker">
-                    <input class="input input__color-picker" type="color" name="color" value="#1322ff"/>
+                    <input class="input input__color-picker" type="color" name="color" value="#FF0066"/>
             </div>
             <div class="palette__sides">
                 <div class="palette__side palette__side__white">
