--- a/index.html
+++ b/index.html
@@ -13,22 +13,39 @@
 </header>
 <main class="main">
     <div class="modes">
-        <div class="mode">
+        <div class="mode mode--ludicrous">
             <div class="mode__img">
                 <img class="mode__img__img" src="assets/images/unicorn-1.png" alt="ludicrous">
             </div>
-            <div class="mode__name mode_ludicrous">
+            <div class="mode-name mode-name--ludicrous">
                 <p>Ludicrous</p>
             </div>
         </div>
-        <div class="mode">
+        <div class="mode mode--normal">
             <div class="mode__img">
                 <img class="mode__img__img" src="assets/images/unicorn-2.jpeg" alt="normal">
             </div>
-            <div class="mode__name mode_normal">
+            <div class="mode-name mode-name--normal">
                 <p>Normal</p>
             </div>
         </div>
+        <div class="mode mode--lighten">
+            <div class="mode__img">
+                <img class="mode__img__img" src="assets/images/unicorn-3.jpg" alt="lighten">
+            </div>
+            <div class="mode-name mode-name--lighten">
+                <p>Lighten</p>
+            </div>
+        </div>
+        <div class="mode mode--darken">
+            <div class="mode__img">
+                <img class="mode__img__img" src="assets/images/unicorn-4.jpg" alt="darken">
+            </div>
+            <div class="mode-name mode-name--darken">
+                <p>Darken</p>
+            </div>
+        </div>
+
     </div>
     <div class="canvas-area">
         <div class="canvas-container">
@@ -46,29 +63,25 @@
     <div class="dipping-area">
         <div class="palette">
             <div class="palette__color-picker">
-                    <input class="input input__color-picker" type="color" name="color" value="#FF0066"/>
-            </div>
-            <div class="palette__sides">
-                <div class="palette__side palette__side__white">
-                    <div class="palette__color palette__color__white"></div>
-                </div>
-                <div class="palette__side palette__side__black">
-                    <div class="palette__color palette__color__black"></div>
-                </div>
+                <input class="input input__color-picker" type="color" name="color" value="#FF0066"/>
             </div>
         </div>
         <div class="brushes">
             <div class="brush">
-                <img class="brush__img brush__thin" data-thickness="S" src="assets/images/brushes/brush-s.png" alt="thin"/>
+                <img class="brush__img brush__thin" data-thickness="S" src="assets/images/brushes/brush-s.png"
+                     alt="thin"/>
             </div>
             <div class="brush">
-                <img class="brush__img brush__medium" data-thickness="M" src="assets/images/brushes/brush-m.png" alt="medium"/>
+                <img class="brush__img brush__medium" data-thickness="M" src="assets/images/brushes/brush-m.png"
+                     alt="medium"/>
             </div>
             <div class="brush">
-                <img class="brush__img brush__thick" data-thickness="L" src="assets/images/brushes/brush-l.png" alt="thick"/>
+                <img class="brush__img brush__thick" data-thickness="L" src="assets/images/brushes/brush-l.png"
+                     alt="thick"/>
             </div>
             <div class="brush">
-                <img class="brush__img brush__very-thick" data-thickness="XL" src="assets/images/brushes/brush-xl.png" alt="very thick"/>
+                <img class="brush__img brush__very-thick" data-thickness="XL" src="assets/images/brushes/brush-xl.png"
+                     alt="very thick"/>
             </div>
         </div>
     </div>
