Handle actions between painting and cleaning

--- a/index.html
+++ b/index.html
@@ -53,14 +53,11 @@
 
             </div>
             <div class="clear-canvas">
-                <button>Clean canvas</button>
-            </div>
-            <div class="eraser">
-                <i class="fas fa-eraser"></i>
+                <button>Clear canvas</button>
             </div>
         </div>
     </div>
-    <div class="dipping-area">
+    <div class="accessories">
         <div class="palette">
             <div class="palette__color-picker">
                 <input class="input input__color-picker" type="color" name="color" value="#FF0066"/>
@@ -82,6 +79,14 @@
             <div class="brush">
                 <img class="brush__img brush__very-thick" data-thickness="XL" src="assets/images/brushes/brush-xl.png"
                      alt="very thick"/>
+            </div>
+        </div>
+        <div class="actions">
+            <div class="action action--painting">
+                <img class="action__img" src="assets/images/paint-brush.png" alt="painting">
+            </div>
+            <div class="action action--cleaning">
+                <img class="action__img" src="assets/images/clean-1.png" alt="cleaning">
             </div>
         </div>
     </div>
