Make minor layout changes

--- a/index.html
+++ b/index.html
@@ -29,20 +29,22 @@
                 <p>Normal</p>
             </div>
         </div>
-        <div class="mode mode--lighten">
-            <div class="mode__img">
-                <img class="mode__img__img" src="assets/images/unicorn-3.jpg" alt="lighten">
+        <div class="modes__hue">
+            <div class="mode mode--lighten">
+                <div class="mode__img">
+                    <img class="mode__img__img" src="assets/images/unicorn-3.jpg" alt="lighten">
+                </div>
+                <div class="mode-name mode-name--lighten">
+                    <p>Lighten</p>
+                </div>
             </div>
-            <div class="mode-name mode-name--lighten">
-                <p>Lighten</p>
-            </div>
-        </div>
-        <div class="mode mode--darken">
-            <div class="mode__img">
-                <img class="mode__img__img" src="assets/images/unicorn-4.jpg" alt="darken">
-            </div>
-            <div class="mode-name mode-name--darken">
-                <p>Darken</p>
+            <div class="mode mode--darken">
+                <div class="mode__img">
+                    <img class="mode__img__img" src="assets/images/unicorn-4.jpg" alt="darken">
+                </div>
+                <div class="mode-name mode-name--darken">
+                    <p>Darken</p>
+                </div>
             </div>
         </div>
 
@@ -53,7 +55,7 @@
 
             </div>
             <div class="clear-canvas">
-                <button>Clear canvas</button>
+                <i class="far fa-times-circle fa-2x"></i>
             </div>
         </div>
     </div>
