style header and footer, fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body">
 <header class="header">
-    <h1>Pixel</h1>
+    <h1 class="title">Pixel</h1>
 </header>
 <main class="main">
     <div class="modes">
@@ -18,7 +18,7 @@
                 <img class="mode__img__img" src="assets/images/unicorn-1.png" alt="ludicrous">
             </div>
             <div class="mode-name mode-name--ludicrous">
-                <p>Ludicrous</p>
+                <p class="mode-name__name">Ludicrous</p>
             </div>
         </div>
         <div class="mode mode--normal">
@@ -26,7 +26,7 @@
                 <img class="mode__img__img" src="assets/images/unicorn-2.jpeg" alt="normal">
             </div>
             <div class="mode-name mode-name--normal">
-                <p>Normal</p>
+                <p class="mode-name__name">Normal</p>
             </div>
         </div>
         <div class="modes__hue">
@@ -62,6 +62,7 @@
     <div class="accessories">
         <div class="palette">
             <div class="palette__color-picker">
+                <p class="color-picker__description">Brush color</p>
                 <input class="input input__color-picker" type="color" name="color" value="#FF0066"/>
             </div>
         </div>
@@ -94,8 +95,8 @@
     </div>
 </main>
 <footer class="footer">
-    <p>Made by Chandra Prakash</p>
-    <p>Hosted with <i class="fas fa-heart"></i> by github</p>
+    <p class="footer-text">Made by Chandra Prakash</p>
+    <p class="footer-text">Hosted with <i class="fas fa-heart"></i> by github</p>
 </footer>
 <script src="main.js"></script>
 </body>
