--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
         </div>
         <div class="mode mode--normal">
             <div class="mode__img">
-                <img class="mode__img__img" src="assets/images/unicorn-2.jpeg" alt="normal">
+                <img class="mode__img__img" src="assets/images/unicorn-1.png" alt="normal">
             </div>
             <div class="mode-name mode-name--normal">
                 <p class="mode-name__name">Normal</p>
             </div>
         </div>
         <div class="modes__hue">
-            <div class="mode mode--lighten">
-                <div class="mode__img">
-                    <img class="mode__img__img" src="assets/images/unicorn-3.jpg" alt="lighten">
+            <div class="mode mode__hue mode--lighten">
+                <div class="mode__hue__img">
+                    <img class="mode__hue__img__img" src="assets/images/unicorn-3.jpg" alt="lighten">
                 </div>
                 <div class="mode-name mode-name--lighten">
-                    <p>Lighten</p>
+                    <p class="mode-hue__name__name">Lighten</p>
                 </div>
             </div>
-            <div class="mode mode--darken">
-                <div class="mode__img">
-                    <img class="mode__img__img" src="assets/images/unicorn-4.jpg" alt="darken">
+            <div class="mode mode__hue mode--darken">
+                <div class="mode__hue__img">
+                    <img class="mode__hue__img__img" src="assets/images/unicorn-4.jpg" alt="darken">
                 </div>
                 <div class="mode-name mode-name--darken">
-                    <p>Darken</p>
+                    <p class="mode-hue__name__name">Darken</p>
                 </div>
             </div>
         </div>
