Add different images and style modes, actions

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8">
-    <title>Paint</title>
+    <title>Pixel</title>
     <link rel="stylesheet" href="stylesheets/styles.css" type="text/css"/>
     <link rel="icon" href="assets/images/icon.png"/>
     <script src="https://kit.fontawesome.com/48509a2691.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
     <div class="modes">
         <div class="mode mode--ludicrous">
             <div class="mode__img">
-                <img class="mode__img__img" src="assets/images/unicorn-1.png" alt="ludicrous">
+                <img class="mode__img__img" src="assets/images/modes/ludicrous.png" alt="ludicrous">
             </div>
             <div class="mode-name mode-name--ludicrous">
                 <p class="mode-name__name">Ludicrous</p>
@@ -23,24 +23,24 @@
         </div>
         <div class="mode mode--normal">
             <div class="mode__img">
-                <img class="mode__img__img" src="assets/images/unicorn-1.png" alt="normal">
+                <img class="mode__img__img" src="assets/images/modes/normal.png" alt="normal">
             </div>
             <div class="mode-name mode-name--normal">
                 <p class="mode-name__name">Normal</p>
             </div>
         </div>
         <div class="modes__hue">
-            <div class="mode mode__hue mode--lighten">
+            <div class="mode mode--lighten mode__hue">
                 <div class="mode__hue__img">
-                    <img class="mode__hue__img__img" src="assets/images/unicorn-3.jpg" alt="lighten">
+                    <img class="mode__hue__img__img" src="assets/images/modes/lighten.png" alt="lighten">
                 </div>
                 <div class="mode-name mode-name--lighten">
                     <p class="mode-hue__name__name">Lighten</p>
                 </div>
             </div>
-            <div class="mode mode__hue mode--darken">
+            <div class="mode mode--darken mode__hue">
                 <div class="mode__hue__img">
-                    <img class="mode__hue__img__img" src="assets/images/unicorn-4.jpg" alt="darken">
+                    <img class="mode__hue__img__img" src="assets/images/modes/darken.png" alt="darken">
                 </div>
                 <div class="mode-name mode-name--darken">
                     <p class="mode-hue__name__name">Darken</p>
