remove extra files

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <img class="action__img" src="assets/images/paint-brush.png" alt="painting">
             </div>
             <div class="action action--cleaning">
-                <img class="action__img" src="assets/images/clean-1.png" alt="cleaning">
+                <img class="action__img" src="assets/images/clean.png" alt="cleaning">
             </div>
         </div>
     </div>
