highlight modes and actions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </header>
 <main class="main">
     <div class="modes">
-        <div class="mode mode--ludicrous">
+        <div class="mode mode--ludicrous" data-mode="ludicrous">
             <div class="mode__img">
                 <img class="mode__img__img" src="assets/images/modes/ludicrous.png" alt="ludicrous">
             </div>
@@ -21,7 +21,7 @@
                 <p class="mode-name__name">Ludicrous</p>
             </div>
         </div>
-        <div class="mode mode--normal">
+        <div class="mode mode--normal" data-mode="normal">
             <div class="mode__img">
                 <img class="mode__img__img" src="assets/images/modes/normal.png" alt="normal">
             </div>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="modes__hue">
-            <div class="mode mode--lighten mode__hue">
+            <div class="mode mode--lighten mode__hue" data-mode="lighten">
                 <div class="mode__hue__img">
                     <img class="mode__hue__img__img" src="assets/images/modes/lighten.png" alt="lighten">
                 </div>
@@ -38,7 +38,7 @@
                     <p class="mode-hue__name__name">Lighten</p>
                 </div>
             </div>
-            <div class="mode mode--darken mode__hue">
+            <div class="mode mode--darken mode__hue" data-mode="darken">
                 <div class="mode__hue__img">
                     <img class="mode__hue__img__img" src="assets/images/modes/darken.png" alt="darken">
                 </div>
@@ -85,10 +85,10 @@
             </div>
         </div>
         <div class="actions">
-            <div class="action action--painting">
+            <div class="action action--painting" data-action="painting">
                 <img class="action__img" src="assets/images/paint-brush.png" alt="painting">
             </div>
-            <div class="action action--cleaning">
+            <div class="action action--cleaning" data-action="cleaning">
                 <img class="action__img" src="assets/images/clean.png" alt="cleaning">
             </div>
         </div>
